2002-01-02  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* gda-server-recordset.c (get_row): fixed counter on row retrieval
	loop, which was getting always 1 row more

	* Makefile.am: s/IDLFILES/IDL_FILES, so that ORBit-generated files
	are regenerated when the IDL files change

2001-12-31  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-recordset.c (gda_recordset_get_value_at): move to next row
	after successfully fetching

2001-12-30  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server-recordset-model.[ch]: new class, for creating
	GdaServerRecordset's from data models

	* gda-server-recordset.[ch] (gda_server_recordset_set_connection):
	(gda_server_recordset_set_fetch_func):
	(gda_server_recordset_set_describe_func): new functions

	* gda-row.[ch] (gda_field_set_value): set const for GdaValue argument

2001-12-29  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-connection.h: added new schemas to GdaConnectionSchema

2001-12-27  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server-provider.[ch]: added getSchema virtual function
	(gda_server_provider_get_schema): new function

	* gda-server-connection.c (impl_Connection_getSchema): implemented

	* gda-connection.[ch] (gda_connection_get_schema): new function

	* gda-parameter.[ch] (gda_parameter_list_new_from_corba): new function

2001-12-25  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-server-connection.c (gda_server_connection_class_init): also
	initialize the supports function pointer

	* gda-xml-database.[ch] (gda_xml_database_new_from_uri): renamed
	from gda_xml_database_new_from_file, so that we can get the file
	from any place supported by GnomeVFS
	(gda_xml_database_save): removed, not needed anymore, there is
	gda_xml_document_to_file, which even now works with GnomeVFS
	(gda_xml_database_free): removed

2001-12-23  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-row.c (gda_row_new): initialize all GdaField's to be
	a NULL value

	* gda-value.c (gda_value_set_*): fixed all functions to really
	work as expected
