@@ -1,3 +1,9 @@
+2002-01-03  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>
+
+	* gda-server-connection.c (gda_server_connection_free_error_list): 
+	Test if the error list is NULL to avoid failing assertion in
+	gda_error_list_free().
+
 2002-01-02  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>
 
 	* gda-server-recordset.c (get_row): fixed counter on row retrieval
@@ -5,6 +11,9 @@
 
 	* Makefile.am: s/IDLFILES/IDL_FILES, so that ORBit-generated files
 	are regenerated when the IDL files change
+	* gda-server-connection.c (gda_server_connection_free_error_list): 
+	Test if the error list is NULL to avoid failing assertion in
+	gda_error_list_free().
 
 2001-12-31  Rodrigo Moya <rodrigo@gnome-db.org>
 
